# pypp

./: .coverage  .gitignore  README.md  coverage.json  main.py  pyproject.toml
compiler/ast/: __init__.py  main.py  pyproject.toml
compiler/ast_nodes/: __init__.py  base.py  main.py  pyproject.toml
compiler/codegen/: main.py
compiler/lexer/: __init__.py  main.py  pyproject.toml  tests.py
compiler/parser/: main.py
compiler/pypp_lexer/: pyproject.toml
compiler/pypp_parser/: __init__.py  exceptions.py  main.py  pyproject.toml
examples/: hello.pypp
tests/: test_namespace_workspace.py
