[project]
name = "ast-nodes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["pyproject.toml", "README.md"]

[tool.hatch.build.targets.wheel.sources]
"." = "compiler/ast_nodes"

[tool.hatch.build]
dev-mode-dirs = ["../.."]
