[project]
name = "pypp-lexer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["tests.py", "test_*.py"]
addopts = "-v --cov=compiler.pypp_lexer --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["pyproject.toml", "README.md", "tests.py", ".coverage"]

[tool.hatch.build.targets.wheel.sources]
"." = "compiler/pypp_lexer"

[tool.hatch.build]
dev-mode-dirs = ["../.."]
