[project]
name = "pypp-parser"
version = "0.1.0"
description = "Analizador sintáctico para Py++"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lark>=1.3.1",
    "ast-nodes",
    "pypp-lexer",
]

[tool.uv.sources]
ast-nodes = { workspace = true }
pypp-lexer = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["pyproject.toml", "README.md"]

[tool.hatch.build.targets.wheel.sources]
"." = "compiler/pypp_parser"

[tool.hatch.build]
dev-mode-dirs = ["../.."]
